# cracow_plots

./: .gitignore  README.md  Typ_zabudowy_Czyzyny.csv  app.py  cena_za_m2.csv  demografia.xlsx  docker-compose.yml  dzielnice_przystanki.csv  main.py  piramida_wieku_krk.csv  procent_zabudowy_do_zieleni.csv  przystanki_rodzaj.csv  pyproject.toml
.cursor/rules/: teacher.mdc
01_cracow_plots/: connector.py  data_fetcher.py  db_config.json  main.py  requirements.txt  seed.py
01_cracow_plots/data/: insert_age_pyramid.sql  insert_demographics.sql  insert_districts.sql  insert_facility_access.sql  insert_green_areas.sql  insert_price_registry.sql  insert_stops.sql
sql/: init_bin.sql  schemas.sql
